--- a/Verhuuraantallen/Opdracht 2.ipynb
+++ b/Verhuuraantallen/Opdracht 2.ipynb
@@ -1892,6 +1892,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9160694d",
    "metadata": {},
    "source": [
     "Zoals er te zien is in beide van de bovenstaande grafieken is er een mooie sinus beweging aanwezig. Deze sinusbeweging kan vervolgens als feature toegevoegd worden aan de datasets, omdat deze het verloop van de week of dag aangeeft."
@@ -3230,6 +3231,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "83b1bb37",
    "metadata": {},
    "source": [
     "Nu zal er een parameter grid aangemaakt worden voor een Grid Search CV, om zo de optimale hyperparameters te kunnen bepalen."
@@ -3265,6 +3267,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c5154ae8",
    "metadata": {},
    "source": [
     "Deze parameters kunnen nu worden ingevoerd in het model."
@@ -3294,6 +3297,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9717f0b2",
    "metadata": {},
    "source": [
     "Nu het model is geoptimaliseerd wordt er met de submissie functie een inleverbaar bestand gemaakt voor op Kaggle."
@@ -3354,6 +3358,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bb04b8bc",
    "metadata": {},
    "source": [
     "Aan de hand van de onderstaande code kan er door trial en error een optimale waarde voor het aantal neighbours worden bepaald."
@@ -3417,6 +3422,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5924dbd0",
    "metadata": {},
    "source": [
     "Door het optimale aantal neighbors in te voeren kan het model verbeterd worden."
@@ -3444,6 +3450,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b224a43b",
    "metadata": {},
    "source": [
     "Nu zal er een parameter grid aangemaakt worden voor een Grid Search CV, om zo de optimale hyperparameters te kunnen bepalen."
@@ -3476,6 +3483,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ebaea6ca",
    "metadata": {},
    "source": [
     "Deze parameters kunnen nu worden ingevoerd in het model."
@@ -3542,6 +3550,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7257704c",
    "metadata": {},
    "source": [
     "Nu zal er een parameter grid aangemaakt worden voor een Grid Search CV, om zo de optimale hyperparameters te kunnen bepalen."
@@ -3577,6 +3586,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0578b976",
    "metadata": {},
    "source": [
     "Met deze parameters kan Decision Tree opnieuw worden uitgevoerd. Dit zal een beter resultaat leveren dan er voorheen was te zien."
@@ -3609,6 +3619,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fb6494ca",
    "metadata": {},
    "source": [
     "Nu het getunede model van Decision Tree is uitgevoerd, kan er gekeken worden naar de verschillende feature importances. Een grafiek met deze data geeft aan welke kolommen invloed hebben en hoe sterk de invloed is."
@@ -3637,6 +3648,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f2f787bb",
    "metadata": {},
    "source": [
     "Nu het model is geoptimaliseerd wordt er met de submissie functie een inleverbaar bestand gemaakt voor op Kaggle."
@@ -4117,6 +4129,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "22b44df6",
    "metadata": {},
    "source": [
     "Nu het model is geoptimaliseerd wordt er met de submissie functie een inleverbaar bestand gemaakt voor op Kaggle."
@@ -4125,6 +4138,7 @@
   {
    "cell_type": "code",
    "execution_count": 396,
+   "id": "ded6c46a",
    "metadata": {},
    "outputs": [
     {
@@ -4244,6 +4258,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cfd414bd",
    "metadata": {},
    "source": [
     "Nu het laatste model is getrained kunnen de feature importances worden bekeken."
@@ -4317,6 +4332,7 @@
   {
    "cell_type": "code",
    "execution_count": 423,
+   "id": "d1edba95",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4364,13 +4380,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Results of Dickey Fuller Test:\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Results of Dickey Fuller Test:\n",
       "Test Statistic                -6.625165e+00\n",
       "p-value                        5.901289e-09\n",
       "#Lags Used                     4.300000e+01\n",
@@ -4563,6 +4573,7 @@
   {
    "cell_type": "code",
    "execution_count": 431,
+   "id": "69431b5f",
    "metadata": {},
    "outputs": [
     {
@@ -4634,6 +4645,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "909f83f5",
    "metadata": {},
    "source": [
     "Nu gaan we sarimax trainen op de gehele train dataset, zodat deze op de test dataset kan worden gebruikt."
@@ -4653,6 +4665,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8d063938",
    "metadata": {},
    "source": [
     "Nu gebruiken we SARIMAX op de test data en maken we een csv bestand aan voor Kaggle."
@@ -4661,6 +4674,7 @@
   {
    "cell_type": "code",
    "execution_count": 412,
+   "id": "d8ebbb41",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4771,13 +4785,7 @@
      "output_type": "stream",
      "text": [
       "c:\\Users\\crazy\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\prophet\\plot.py:228: FutureWarning: The behavior of DatetimeProperties.to_pydatetime is deprecated, in a future version this will return a Series containing python datetime objects instead of an ndarray. To retain the old behavior, call `np.array` on the result\n",
-      "  fcst_t = fcst['ds'].dt.to_pydatetime()\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "  fcst_t = fcst['ds'].dt.to_pydatetime()\n",
       "c:\\Users\\crazy\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\prophet\\plot.py:397: FutureWarning: The behavior of DatetimeProperties.to_pydatetime is deprecated, in a future version this will return a Series containing python datetime objects instead of an ndarray. To retain the old behavior, call `np.array` on the result\n",
       "  artists += ax.plot(df_y['ds'].dt.to_pydatetime(), seas[name], ls='-',\n",
       "c:\\Users\\crazy\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\prophet\\plot.py:401: FutureWarning: The behavior of DatetimeProperties.to_pydatetime is deprecated, in a future version this will return a Series containing python datetime objects instead of an ndarray. To retain the old behavior, call `np.array` on the result\n",
@@ -4840,6 +4848,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c9354626",
    "metadata": {},
    "source": [
     "Nu maken we de voorspelling op de test set."
@@ -4995,7 +5004,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
