Toevoegen extra pip installs nodig voor app

--- a/Muziek/Opdracht 3.ipynb
+++ b/Muziek/Opdracht 3.ipynb
@@ -51,7 +51,9 @@
    "outputs": [],
    "source": [
     "# Installeren van nodige libaries indien nog niet gedaan\n",
-    "pip install ipywidgets"
+    "pip install ipywidgets\n",
+    "pip install tkinder\n",
+    "pip install pygame"
    ]
   },
   {
