--- a/Diabetes/Opdracht_1.ipynb
+++ b/Diabetes/Opdracht_1.ipynb
@@ -6,10 +6,10 @@
    "source": [
     "# ***Voorspellen van Diabetes*** \n",
     "\n",
-    "Teamleden:\n",
-    "- Busse Heemskerk\n",
-    "- Declan van den Hoek\n",
-    "- Isa Dijkstra\n",
+    "|Teamleden|Kaggle Username|GitHub Username|\n",
+    "|--|--|--|\n",
+    "|Busse Heemskerk|bussejheemskerk|BJHeemskerk|\n",
+    "|Isa Dijkstra|isadijkstra|IsaD01|\n",
     "\n",
     "In dit notebook worden er, aan de hand van een train dataset, verschillende Machine Learning modellen opgesteld om de meest accurate manier te vinden om diabetes te voorspellen. Voor het project hebben we gewerkt in [GitHub](https://github.com/BJHeemskerk/MachineLearning), om makkelijk de bestanden te delen.\n",
     "\n",
